--- a/ChatBotProject/ChatBotProject/ChatBot.resx
+++ b/ChatBotProject/ChatBotProject/ChatBot.resx
@@ -121,7 +121,7 @@
   <data name="close.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        xAAADsQBlSsOGwAAD0VJREFUeF7tna+zI2UahREIBAKBQCAQK1YgViAQCAQSgUAgEAgEYgViBQJD8Qcg
+        vwAADr8BOAVTJAAAD0VJREFUeF7tna+zI2UahREIBAKBQCAQK1YgViAQCAQSgUAgEAgEYgViBQJD8Qcg
         R4xAIJCIFYgRIxAIBAKBQCBWjBiBQCAQs99JbufNm/sm6e583f39eJ6qp+rOqalJd2rOubm5See5Z8+e
         5fKt5GfJh8n/Jn9M/n7nT3fZ18nPk/q7zyejfwexR99IDv35Lnnan++TQ3/eSWbpTxiO9IXkB0kd1NPk
         VP5IfpP8MKl/K7oNxFZVgd9PqvBPklP5M/lt8qPkS8noNq4ahlfUgX+cnHPQ59C/9WmSRwXYgyrtb8lc
@@ -192,7 +192,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAh1JREFUOE+Vks1P03AYx38H/hluZtyMCXNcdBhGTdD4ksC6MQ9GYHPiTTdcA11E
+        vgAADr4B6kKxwAAAAh1JREFUOE+Vks1P03AYx38H/hluZtyMCXNcdBhGTdD4ksC6MQ9GYHPiTTdcA11E
         ooeZoGQxy4igbIUDJN1GMYBWB5QJgyIHTBzjZXG3BZawZ/Yp7QIxS8aTfNJfn/T7+b2VVKvv0tal0IQg
         IjjW2rXX1yX52fuPPCA41tq1l7giW0bG+ByCY619sRoZjzGI9lq9yuVyXWr70CBt54w6Y9MrjYNBPsAO
         zwTCUz8ak2t7xgobuwbMaHFCljdzDY5+IWNnZgs6NiZRsPbFiq0urtjijBQsrmgFys1lxJ/ZBi1OyKqc
@@ -204,9 +204,9 @@
         xRk9B+WeTH9by9YTQsg/ubnvVCnWb/IAAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="bunifuDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <data name="bunifuDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>17, 17</value>
-  </metadata>
+  </data>
   <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
@@ -254,7 +254,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALEwAACxMBAJqcGAAABl1JREFUeF7t3VvIpWMY
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDgAACw4BQL7hQQAABl1JREFUeF7t3VvIpWMY
         xvFhDCX7Aw4UIkVkl5oQhpKk+MQB2SYOkF1yILtEqQkhygHCUEz2EmUfyYEQJQ7skhzIJmTI5vN/aj25
         py7verfrfZ73uad+J9ecfPd93Wa++dZarxXLy8uuYDJ05ZChK4cMXTlk6MohQ1cOGbpyyNCVQ4auHDJ0
         5ZChK4cMXTlk6MohQ1cOGbpyyNCVQ4auHDJ05ZChK4cMqywtLa3DGvV7Lj8yrEL567GM1/0Q8ifDKpR+
@@ -285,9 +285,9 @@
         lH9C7wAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="bunifuElipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <data name="bunifuElipse1.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>177, 17</value>
-  </metadata>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAEBAAAAEAIABoBAAAZgAAACAgAAABACAAqBAAAM4EAAAwMAAAAQAgAKglAAB2FQAAQEAAAAEA
@@ -2057,7 +2057,7 @@
   <data name="menuButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAMAAAADACAYAAABS3GwHAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
-        MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAACxMAAAsTAQCanBgAAANPSURBVHhe7dyhbUBRDATBNP3r
+        MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAACw4AAAsOAUC+4UEAAANPSURBVHhe7dyhbUBRDATBNP3r
         TxpY8KSY3YAhyywd9s/3fTArI6zICCsywoqMsCIjrMgIKzLCioywIiOsyAgrMsKKjLAiI6zICCsywoqM
         sCIjrMgIKzLCioywIiOsyAgrMsKKjLAiI6zICCsywoqMsCIjrMgIKzLCioywIiOsyAgrMsKKjLAiI6zI
         CCsywoqMsCIjrMgIKzLCioywIiOsyAgrMsKKjMd+4R9qU2cyHquj4FVt6kzGY3UUvKpNncl4rI6CV7Wp
@@ -2075,7 +2075,11 @@
         AElFTkSuQmCC
 </value>
   </data>
-  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <data name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>301, 17</value>
-  </metadata>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="indianNavyLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\indianNavyLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
